Fixed busy ports. Fixed FakeKey SecurityExceptions

--- a/MidiSynthExample/res/layout/main.xml
+++ b/MidiSynthExample/res/layout/main.xml
@@ -21,6 +21,13 @@
     >
 
     <TextView
+        android:id="@+id/text_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/versionName"
+        />
+
+    <TextView
         android:id="@+id/text_receivers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
