MIDI20: imported from older Mac

--- a/MidiScope/src/main/res/xml/scope_device_info.xml
+++ b/MidiScope/src/main/res/xml/scope_device_info.xml
@@ -18,7 +18,8 @@
     <device
         manufacturer="Mobileer"
         product="Scope"
-        name="Mobileer MIDI Scope">
+        name="Mobileer MIDI 2.0 Scope">
         <input-port name="input" />
+        <output-port name="output" />
     </device>
 </devices>
