--- a/MidiBtlePairing/src/main/res/layout/listitem_device.xml
+++ b/MidiBtlePairing/src/main/res/layout/listitem_device.xml
@@ -14,15 +14,22 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-    <TextView android:id="@+id/device_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="24dp"/>
-    <TextView android:id="@+id/device_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="12dp"/>
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/available_border"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/device_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="lorem ipsum"
+        android:textSize="24dp" />
+
+    <TextView
+        android:id="@+id/device_address"
+        android:text="12:34:56:78 [0]"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18dp" />
 </LinearLayout>
