--- a/MidiBtlePairing/src/main/res/layout/listitem_open_device.xml
+++ b/MidiBtlePairing/src/main/res/layout/listitem_open_device.xml
@@ -14,29 +14,41 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView android:id="@+id/device_name"
+    android:layout_height="wrap_content"
+    android:background="@drawable/connected_border"
+    android:orientation="horizontal">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
-        />
-    <TextView android:id="@+id/device_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        />
-    <Button android:id="@+id/close_button"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/device_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="lorem ipsum"
+            android:textSize="24dp" />
+
+        <TextView
+            android:id="@+id/device_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="12:34:56:78 [0]"
+            android:textSize="18dp" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/close_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
-        android:text="X"
-        android:textColor="#FFF"
+        android:layout_margin="5dp"
         android:background="@drawable/round_button_background"
         android:gravity="center_vertical|center_horizontal"
-        android:layout_margin="5dp"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        />
+        android:text="X"
+        android:textColor="#FFF"
+        android:textSize="32dp"
+        android:textStyle="bold" />
 </LinearLayout>
