--- a/MidiBtlePairing/src/main/res/layout/main.xml
+++ b/MidiBtlePairing/src/main/res/layout/main.xml
@@ -17,29 +17,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
+
+
     <TextView
-        android:id="@+id/app_name"
+        android:id="@+id/connected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="@string/header_text"
-        />
-    <Button android:id="@+id/bluetooth_scan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/bluetooth_scan"
-        />
+        android:layout_margin="10dp"
+        android:gravity="center_vertical"
+        android:text="@string/connected_blemidi_devices"
+        android:textSize="18dp" />
+
     <TextView
         android:id="@+id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:gravity="center_vertical"
-        android:text="@string/explain_btle_location"
-        />
+        android:text="@string/explain_btle_location" />
+
     <ListView
         android:id="@+id/open_device_list"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/bluetooth_scan"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:text="@string/bluetooth_scan" />
+
+    <TextView
+        android:id="@+id/version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:gravity="center_vertical"
+        android:text="@string/app_version" />
 </LinearLayout>
