--- a/MidiSynthExample/src/main/res/layout/main.xml
+++ b/MidiSynthExample/src/main/res/layout/main.xml
@@ -18,6 +18,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     >
 
     <TextView
